[tool.poetry]
name = "simple-micro-framework"
version = "0.1.0"
description = ""
authors = ["Leo Feradero Nugraha <leoferaderonugraha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
